kubernetes/grafana-loki/manifest/loki-distributor/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki-distributor
  labels:
    app.kubernetes.io/name: grafana-loki-distributor
    app.kubernetes.io/part-of: grafana-loki
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana-loki-distributor
      app.kubernetes.io/part-of: grafana-loki
  strategy: {}
  template:
    metadata:
      name: loki-distributor
      labels:
        app.kubernetes.io/name: grafana-loki-distributor
        app.kubernetes.io/part-of: grafana-loki
    spec:
      containers:
        - name: distributor
          image: grafana/loki:2.8.3
          imagePullPolicy: Always
          args:
            - -config.file=/etc/loki/config/config.yaml
            - -target=distributor
          volumeMounts:
            - name: config
              mountPath: /etc/loki/config
              readOnly: true
          ports:
            - name: http-metrics
              containerPort: 3100
              protocol: TCP
            - name: grpc
              containerPort: 9095
              protocol: TCP
            - name: http-memberlist
              containerPort: 7946
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 30
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 500Mi
      dnsConfig:
        options:
          - name: ndots
            value: "2"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: config
          configMap:
            name: loki-config
            defaultMode: 0755
