kubernetes/grafana-loki/manifest/loki-distributor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-distributor
  labels:
    app.kubernetes.io/name: grafana-loki-distributor
    app.kubernetes.io/part-of: grafana-loki
  annotations:
    kubernetes.io/ingress.class: ambassador
spec:
  rules:
    - host: loki-distributor.mekari.io
      http:
        paths:
          - backend:
              service:
                name: loki-distributor
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
